# pycasperglow

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
debug/: capture_notifications.py  dump_advertisement.py
examples/: _cli.py  discover_and_turn_off.py  discover_and_turn_on.py  discovery.py  example_pause_resume.py
hooks/: pre-commit
src/pycasperglow/: __init__.py  const.py  device.py  discovery.py  exceptions.py  protocol.py
tests/: test_device.py  test_discovery.py  test_protocol.py
