[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycasperglow"
version = "0.1.0"
description = "Async Python library for controlling Casper Glow lights via BLE"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "bleak>=0.21.0",
    "bleak-retry-connector>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
