[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycasperglow"
version = "0.3.4"
authors = [
    { name = "Mike O'Driscoll" },
]
description = "Async Python library for controlling Casper Glow lights via BLE"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["casper", "glow", "ble", "bluetooth", "home-assistant", "smart-home"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "bleak>=0.21.0",
    "bleak-retry-connector>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/mikeodr/pycasperglow"
Repository = "https://github.com/mikeodr/pycasperglow"
Issues = "https://github.com/mikeodr/pycasperglow/issues"
Changelog = "https://github.com/mikeodr/pycasperglow/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pycasperglow = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
